@@ -5,7 +5,8 @@
 - Option to read log files using VSS snapshots on Windows
 - Per stage confirmation in database manager during database check
 - Fixed file download cancelation
-- Fixed issues: NX-662, NX-703, NX-1045, NX-1201, NX-1252, NX-1268, NX-1339, NX-1341, NX-1342, NX-1343, NX-1344, NX-1361
+- HTTPS support in SMSEagle driver
+- Fixed issues: NX-662, NX-703, NX-1045, NX-1142, NX-1201, NX-1252, NX-1268, NX-1339, NX-1341, NX-1342, NX-1343, NX-1344, NX-1361
 
 
 *
